Ajout du support de l'administration des permissions sur les données à VigiAdmin, dans le cadre du ticket #326. Dans le contrôleur root, il manque pour le moment des vérifications sur les permissions.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5459 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiadmin/admin/layout.html
+++ b/src/vigilo/themes/templates/vigiadmin/admin/layout.html
@@ -20,6 +20,9 @@ from vigilo.models import tables
           <li py:with="url=url_for(tables.UserGroup, _memory=False)">
               <a href="${url}" class="${request.routes['resource'] is tables.UserGroup and 'active' or None}">Usergroups</a>
           </li>
+          <li py:with="url=url_for(tables.DataPermission, _memory=False)">
+              <a href="${url}" class="${request.routes['resource'] is tables.DataPermission and 'active' or None}">Permissions on data</a>
+          </li>
         </ul>
         <div py:replace="select('*|text()')"/>
     </div>
