--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -6,8 +6,13 @@
     height: 24px;
 }
 
+#header a {
+    text-decoration: none;
+}
+
 #logo {
-    margin: 0 0.2em;
+    /*margin: 0 0.2em;*/
+    margin: 0.3em 0.2em;
     float: left;
 }
 
