Modification du formulaire de création de liens services dans VigiMap afin de clarifier un peu les choses. Ajout de Fx.Reveal dans mootools-more pour VigiMap.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5504 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/link_form.html
+++ b/src/vigilo/themes/templates/vigimap/link_form.html
@@ -1,3 +1,3 @@
 <div xmlns:py="http://genshi.edgewall.org/" py:strip="">
-${link_form(kw, onsubmit=onsubmit)}
+${link_form(kw, onsubmit=onsubmit, **child_args)}
 </div>
