Alignement des items du header de VigiBoard.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5509 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -53,6 +53,14 @@ h1 a:hover {
     margin: 0 0.1em;
 }
 
+.header_item input {
+    margin-top: 0.4em;
+}
+
+.header_item#font_size_selector {
+    margin-top: 0.4em;
+}
+
 /* Table des évènements */
 
 .vigitable {
