En-tête un peu plus sobre allant plus dans l'esprit de Vigilo. Mise à jour des traductions dans les thèmes.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5530 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/common/header.html
+++ b/src/vigilo/themes/templates/common/header.html
@@ -4,7 +4,7 @@
 <py:def function="header">
   <div id="header">
   	<h1>Welcome to Vigilo</h1>
-	<span class="subtitle">The network monitoring solution</span>
+	<span class="subtitle">Monitor freely</span>
   </div>
 </py:def>
 </html>
