--- a/src/vigilo/themes/templates/vigimap/master.html
+++ b/src/vigilo/themes/templates/vigimap/master.html
@@ -22,7 +22,7 @@
     <span py:if="tg.auth_stack_enabled and not asbool(tg.config.get('external_auth'))" py:strip="True">
         <li py:if="not request.identity" class="loginlogout"><a href="${tg.url('/login')}">Login</a></li>
         <li py:if="request.identity" class="loginlogout"><a href="${tg.url('/logout_handler')}">Logout</a></li>
-        <li py:if="request.identity" id="admin" class="loginlogout"><a href="${tg.url('/admin')}">Admin</a></li>
+        <li py:if="request.identity" id="admin" class="loginlogout"><a href="${tg.url('/admin/mapgroups')}">Administration</a></li>
     </span>
   </ul>
   <div id="content">
