* Amélioration des menus de choix dans VigiGraph  * Présentation légèrement différente de la barre d'outils
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5628 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigigraph/css/search.css
+++ b/src/vigilo/themes/public/vigigraph/css/search.css
@@ -1,16 +1,25 @@
 #search_form {
     padding: 8px;
+    font-size: 12px;
 }
 
 #search_form label,
 #search_form input {
     float: left;
-    width: 93px;
     margin: 8px;
+    font-size: 12px;
+    padding: 2px;
+}
+
+#search_form #search_form_host,
+#search_form #search_form_graph {
+    width: 130px;
 }
 
 #search_form #search_form_search {
+    width: 93px;
     float: right;
+    padding: 0;
 }
 
 #search_form > div {
