--- a/src/vigilo/themes/public/vigigraph/css/vigigraph.css
+++ b/src/vigilo/themes/public/vigigraph/css/vigigraph.css
@@ -116,3 +116,6 @@ img.logo {
 .notice {
     background: #EEEEFF url(../images/info.png) no-repeat scroll 0px center;
 }
+
+.jxTree a, .jxTreeRoot a { overflow: visible; }
+
