Correction d'un petit bug graphique
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5630 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigigraph/css/vigigraph.css
+++ b/src/vigilo/themes/public/vigigraph/css/vigigraph.css
@@ -85,7 +85,7 @@ img.logo {
 /* Flash */
 
 #flash {
-	opacity: 0;
+    opacity: 0;
 }
 
 #flash, .notice {
@@ -118,4 +118,5 @@ img.logo {
 }
 
 .jxTree a, .jxTreeRoot a { overflow: visible; }
+.jxFlyout { z-index: 1001; } /* au-dessus des jx.Dialog */
 
