Ajout de la table des permissions (sur les applications) dans VigiAdmin, pour faciliter le travail d'admin chez un client.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5767 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiadmin/admin/layout.html
+++ b/src/vigilo/themes/templates/vigiadmin/admin/layout.html
@@ -26,6 +26,9 @@ from vigilo.models import tables
           <li py:with="url=url_for(tables.DataPermission, _memory=False)">
               <a href="${url}" class="${request.routes['resource'] is tables.DataPermission and 'active' or None}">Permissions on data</a>
           </li>
+          <li py:with="url=url_for(tables.Permission, _memory=False)">
+              <a href="${url}" class="${request.routes['resource'] is tables.Permission and 'active' or None}">Permissions on applications</a>
+          </li>
         </ul>
         <div py:replace="select('*|text()')"/>
     </div>
