Corrige un freeze de l'édition d'événements dans VigiBoard sous IE7 (le style "table-row" n'est pas supporté pour la propriété CSS "display").
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5768 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/plugins/status.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/status.html
@@ -122,7 +122,12 @@
         var warning = $$('edit_event_form_warning.container');
         if (ref == '' && ids.length > 1) {
             warning.show('block');
-            warning.show('table-row');
+            try {
+                // IE 7 ne reconnait pas "table-row"
+                // et lève une exception.
+                warning.show('table-row');
+            }
+            catch (e) {}
         }
         else warning.hide();
 
