Élargissement des zones de saisie pour les noms des hôtes/services/graphes/indicateurs dans le formulaire de création d'un lien de type service.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5847 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/ServiceElement.css
+++ b/src/vigilo/themes/public/vigimap/css/ServiceElement.css
@@ -34,6 +34,13 @@
 #mapnode_form_label,
 #mapnode_form_host_word,
 #mapnode_form_service_word,
-#mapnode_form_graph_word {
+#mapnode_form_graph_word,
+#link_form_fieldsetllslink_host_word,
+#link_form_fieldsetllslink_service_word,
+#link_form_fieldsetllslink_graph_word,
+#link_form_fieldsetllslink_out_name,
+#link_form_fieldsetllslink_ds_out,
+#link_form_fieldsetllslink_in_name,
+#link_form_fieldsetllslink_ds_in {
     width: 230px;
 }
