Modification pour assurer un affichage correct de VigiMap (en mode affichage) dans IE 7 (#423).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5867 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -155,6 +155,12 @@ h1 a:hover {
 
 
 /* Elements de carte */
+#map div.serviceelement .status {
+    /*  Nécessaire pour IE 7. La feuille "non-ie7.css"
+        remplace cette valeur pour les autres navigateurs,
+        y compris pour IE 8 qui ne présente plus le bug. */
+    margin: 0;
+}
 
 #map .obj {
     position: absolute;
