--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -6,6 +6,7 @@
     <xi:include href="main.html" />
 <head>
     <title>VigiMap</title>
+    <!--[if !(IE 7)]><!--><style type="text/css">@import "${tg.url('css/non-ie7.css')}";</style><!--><![endif]-->
     <script type="text/javascript">
     window.addEvent('load', function () {
         menu.refresh_button.setActive(${int(asbool(tg.config.get('refresh_enabled', False)))});
