Suppression des liens d'impression/recherche sur fullHostPage dans VigiGraph (#322).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5908 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/fullhostpage.html
+++ b/src/vigilo/themes/templates/vigigraph/fullhostpage.html
@@ -4,7 +4,7 @@
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
 
-<xi:include href="main.html" />
+<xi:include href="main_simplified.html" />
 
     <head>
         <title>${l_('List of graphs for "%s"') % host}</title>
