Modification du comportement de l'auto-complétion dans la recherche de VigiBoard. L'utilisateur peut appuyer sur Échap. après avoir saisie un texte pour interrompre l'auto-complétion.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5912 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -213,7 +213,7 @@
             // ATTENTION: domObj n'est pas documenté dans l'API.
             zIndex: window.search_dialog.domObj.getStyle('zIndex').toInt(),
             minLength: 3,
-            selectMode: 'type-ahead',
+            selectMode: 'pick',
             postVar: varname
         });
     }
