Correction pour un nouveau problème d'affichage dans VigiMap.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5917 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -26,10 +26,10 @@
 
     <style type="text/css">@import "${tg.url('css/widget_images.css')}";</style>
     <script type="text/javascript" src="${tg.url('/js/widget_images.js')}"></script>
-
+    <!--[if !(IE 7)]><!--><style type="text/css">@import "${tg.url('css/non-ie7.css')}";</style><!--><![endif]-->
 </head>
-<body>
 
+<body>
     <div id="maplist">
         <ul>
         </ul>
