--- a/src/vigilo/themes/templates/vigiadmin/master.html
+++ b/src/vigilo/themes/templates/vigiadmin/master.html
@@ -19,7 +19,7 @@
 
 <body py:match="body" py:attrs="select('@*')">
   ${header()}
-  <ul id="mainmenu" py:with="login = request.identity and request.identity.get('user') and request.identity['user'].user_name or None">
+  <ul id="mainmenu">
     <li class="first"><a href="${tg.url('/')}" class="${('', 'active')[defined('page') and page==page=='index']}">Welcome</a></li>
     <!--! On masque le bouton de login/logout si une authentification externe est utilisée. -->
     <span py:if="tg.auth_stack_enabled and not asbool(tg.config.get('external_auth'))" py:strip="True">
@@ -27,7 +27,7 @@
     <li py:if="request.identity" id="loginbtn" class="loginlogout"><a href="${tg.url('/logout_handler')}">Logout</a></li>
     </span>
     <li py:if="request.identity" id="adminbtn" class="${('', 'active')[defined('page') and page==page=='admin']}"><a href="${tg.url('/perms')}">Permissions</a></li>
-    <span py:if="login == 'manager' or not asbool(tg.config.get('external_auth'))" py:strip="True">
+    <span py:if="request.identity['repoze.who.userid'] == 'manager' or not asbool(tg.config.get('external_auth'))" py:strip="True">
     <li id="profilebtn" class="${('', 'active')[defined('page') and page==page=='profile']}"><a href="${tg.url('/profile')}">Profile</a></li>
     </span>
 <!--! La collecte est désactivée. -->
@@ -35,7 +35,7 @@
 <!--! La maintenance planifiée est désactivée tant que certains problèmes n'auront pas été résolus. -->
 <!--!    <li py:if="request.identity" id="downtimebtn" class="${('', 'active')[defined('page') and page==page=='downtime']}"><a href="${tg.url('/downtime')}">Downtime</a></li>-->
 
-    <li id="userinfo" py:if="request.identity">Logged in as: ${login}</li>
+    <li id="userinfo" py:if="request.identity">Logged in as: <span>${request.identity['repoze.who.userid']}</span></li>
   </ul>
   <div id="content">
     <py:with vars="flash=tg.flash_obj.render('flash', use_js=False)">
