--- a/src/vigilo/themes/templates/vigimap/link.html
+++ b/src/vigilo/themes/templates/vigimap/link.html
@@ -13,11 +13,48 @@
     </py:choose>
 
     <?python import time ?>
-    <p py:if="graph"><img src="${tg.url('/vigirrd/%s/graph.png' % host,
-        host_=host,
-        graphtemplate=graph,
-        start=int(time.time() - duration),
-        duration=duration,
-        details=0,
-    )}" alt="${_('Graph for %(graph)s on %(host)s') % {'graph': graph, 'host': host}}" /></p>
+    <!--!
+        On construit un lien qui va permettre de charger
+        automatiquement ce graphe dans VigiGraph.
+        Pour cela, on crée d'abord l'URL normale avec tg.url(),
+        puis on supprime le chemin d'accès jusqu'à la page.
+        Ensuite, on fait de nouveau appel à tg.url() pour encoder
+        correctement l'URL de nouveau (on ne peut pas utiliser
+        urllib ici) et on supprime de nouveau le préfixe,
+        en tenant compte du paramètre "g" ajouté pour les besoins
+        de tg.url().
+        Enfin, on injecte l'URL sans modification dans le code
+        du lien HTML qu'on veut afficher.
+    -->
+    <p py:if="graph" py:choose="" py:with="prefix = len(tg.url('/'))+1; graph_url = tg.url('/', {
+                    'g': tg.url('/', {
+                        'host_': host,
+                        'graph': graph,
+                        'top': 0,
+                        'left': 0,
+                    })[prefix:]
+                })[prefix+2:]">
+        <a py:when="tg.config.get('vigigraph')" target="_blank" href="${tg.url(
+            tg.config['vigigraph'].rstrip('/') +
+            '/#graphs[0]=%s&amp;safety=1' % graph_url)}">
+            <img src="${tg.url('/vigirrd/%s/graph.png' % host,
+                host_=host,
+                graphtemplate=graph,
+                start=int(time.time() - duration),
+                duration=duration,
+                details=0,
+            )}"
+            alt="${_('Graph for %(graph)s on %(host)s') %
+                {'graph': graph, 'host': host}}" />
+        </a>
+        <img py:otherwise="" src="${tg.url('/vigirrd/%s/graph.png' % host,
+            host_=host,
+            graphtemplate=graph,
+            start=int(time.time() - duration),
+            duration=duration,
+            details=0,
+        )}"
+        alt="${_('Graph for %(graph)s on %(host)s') %
+            {'graph': graph, 'host': host}}" />
+    </p>
 </div>
