La fonction add_autocompleter était définie dans deux fichiers différents, ce qui fait que le code censé corriger le comportement de l'auto-compléteur (r5912) était tout simplement ignoré.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6066 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -212,9 +212,10 @@
         new Autocompleter.Request.VigiloJSON(elem, url, {
             // ATTENTION: domObj n'est pas documenté dans l'API.
             zIndex: window.search_dialog.domObj.getStyle('zIndex').toInt(),
-            minLength: 3,
+            minLength: 1,
             selectMode: 'pick',
-            postVar: varname
+            postVar: varname,
+            overflow: true
         });
     }
 /*]]>*/
