Propagation du critère de recherche sur le nom d'hôte dans le formulaire de filtrage de VigiBoard. Fait suite à une modif dans VigiBoard pour éviter un conflit avec url()/redirect() et l'usage du paramètre réservé "host".
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6098 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -57,7 +57,7 @@ ${toolbar()}
     On utilise le traducteur de l'application ici plutôt que celui des thèmes
     pour éviter des erreurs d'interprétation du format dans le contrôleur.
 -->
-<div style="display: none">
+<div style="display: none" py:with="copy = search.copy(); dummy = copy.update(host=copy.pop('host_', None))">
     ${search_form(
         search,
         child_args=dict(
